--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <properties>
 		<jboss_home>{JBOSS_HOME}</jboss_home>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.target>1.7</maven.compiler.target>
+      		<maven.compiler.source>1.7</maven.compiler.source>
   </properties>
   
   
