--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,6 @@
   <properties>
 		<jboss_home>{JBOSS_HOME}</jboss_home>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.target>1.7</maven.compiler.target>
-      		<maven.compiler.source>1.7</maven.compiler.source>
   </properties>
   
   
@@ -20,6 +18,13 @@
   </repositories>
 	
   <dependencies>
+  	
+  	<dependency>
+		<groupId>javax</groupId>
+		<artifactId>javaee-api</artifactId>
+		<version>7.0</version>
+	</dependency>
+
 	<dependency>
 	 	<groupId>org.jboss.resteasy</groupId>
 	 	<artifactId>resteasy-jaxrs</artifactId>
@@ -59,17 +64,26 @@
 	
   </dependencies>
   
-  <build>
-	<finalName>counterService</finalName>
-	<plugins>
-		<plugin>
-          		<groupId>org.wildfly.plugins</groupId>
-            		<artifactId>wildfly-maven-plugin</artifactId>
-              		<version>1.1.0.Alpha4</version>
-              		<configuration>
-                    		<jboss-home>{$jboss_home}</jboss-home>
-              		</configuration>
-        	</plugin>
+  	<build>
+		<finalName>counterService</finalName>
+		<plugins>
+			<plugin>
+          			<groupId>org.wildfly.plugins</groupId>
+            			<artifactId>wildfly-maven-plugin</artifactId>
+              			<version>1.1.0.Alpha4</version>
+              			<configuration>
+                    			<jboss-home>{$jboss_home}</jboss-home>
+              			</configuration>
+        		</plugin>
+        		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+		        	<artifactId>maven-compiler-plugin</artifactId>
+		        	<version>3.3</version>
+		        	<configuration>
+		        		<source>1.7</source>
+		        		<target>1.7</target>
+		        	</configuration>
+	        	</plugin>
 	</plugins>
 	</build>
 </project>
