--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,22 @@
   <dependencies>
   	
   	<dependency>
-		<groupId>javax</groupId>
-		<artifactId>javaee-api</artifactId>
-		<version>7.0</version>
+		<groupId>javax.inject</groupId>
+		<artifactId>javax.inject</artifactId>
+		<version>1</version>
+	</dependency>
+
+	<dependency>
+		<groupId>javax.ejb</groupId>
+		<artifactId>ejb-api</artifactId>
+		<version>3.0</version>
+	</dependency>
+
+	<dependency>
+	    <groupId>javax.enterprise</groupId>
+	    <artifactId>cdi-api</artifactId>
+	    <version>1.2</version>
+	    <scope>provided</scope>
 	</dependency>
 
 	<dependency>
