--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
   <dependencies>
   	
   	<dependency>
+		<groupId>javax</groupId>
+		<artifactId>javaee-api</artifactId>
+		<version>7.0</version>
+	</dependency>
+  	
+  	<dependency>
 		<groupId>javax.inject</groupId>
 		<artifactId>javax.inject</artifactId>
 		<version>1</version>
